# p1-starting-an-api-hunghuynh1110

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
