[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "hunghuynh1110",email = "giahung.huynh@student.uq.edu.au"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "fastapi (>=0.132.0,<0.133.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
